@@ -27,6 +27,10 @@
 			<BEGIN>[</BEGIN>
 			<END>]</END>
 		</SPAN>
+
+		<MARK_PREVIOUS TYPE="FUNCTION"
+			EXCLUDE_MATCH="TRUE">(</MARK_PREVIOUS>
+
 		<EOL_SPAN TYPE="COMMENT1">--</EOL_SPAN>
 		<SEQ TYPE="OPERATOR">+</SEQ>
 		<SEQ TYPE="OPERATOR">-</SEQ>
@@ -43,6 +47,7 @@
 		<SEQ TYPE="OPERATOR">!=</SEQ>
 		<SEQ TYPE="OPERATOR">!&gt;</SEQ>
 		<SEQ TYPE="OPERATOR">!&lt;</SEQ>
+		<SEQ TYPE="OPERATOR">::</SEQ>
 		<MARK_PREVIOUS TYPE="LABEL" AT_LINE_START="TRUE">:</MARK_PREVIOUS>
 		<SEQ TYPE="NULL">:</SEQ>
 		<SEQ TYPE="NULL">.</SEQ>
@@ -53,6 +58,7 @@
 
 		<KEYWORDS IGNORE_CASE="TRUE">
 			<!-- reserved words -->
+			<KEYWORD1>ABSOLUTE</KEYWORD1>
 			<KEYWORD1>ADD</KEYWORD1>
 			<KEYWORD1>ALTER</KEYWORD1>
 			<KEYWORD1>ANSI_NULLS</KEYWORD1>
@@ -100,6 +106,7 @@
 			<KEYWORD1>DROP</KEYWORD1>
 			<KEYWORD1>DUMMY</KEYWORD1>
 			<KEYWORD1>DUMP</KEYWORD1>
+			<KEYWORD1>DYNAMIC</KEYWORD1>
 			<KEYWORD1>ELSE</KEYWORD1>
 			<KEYWORD1>END</KEYWORD1>
 			<KEYWORD1>ERRLVL</KEYWORD1>
@@ -109,40 +116,50 @@
 			<KEYWORD1>EXEC</KEYWORD1>
 			<KEYWORD1>EXECUTE</KEYWORD1>
 			<KEYWORD1>EXIT</KEYWORD1>
+			<KEYWORD1>FAST_FORWARD</KEYWORD1>
 			<KEYWORD1>FETCH</KEYWORD1>
 			<KEYWORD1>FILE</KEYWORD1>
 			<KEYWORD1>FILLFACTOR</KEYWORD1>
+			<KEYWORD1>FIRST</KEYWORD1>
 			<KEYWORD1>FLOPPY</KEYWORD1>
 			<KEYWORD1>FOR</KEYWORD1>
 			<KEYWORD1>FOREIGN</KEYWORD1>
+			<KEYWORD1>FORWARD_ONLY</KEYWORD1>
 			<KEYWORD1>FREETEXT</KEYWORD1>
 			<KEYWORD1>FREETEXTTABLE</KEYWORD1>
 			<KEYWORD1>FROM</KEYWORD1>
 			<KEYWORD1>FULL</KEYWORD1>
+			<KEYWORD1>FUNCTION</KEYWORD1>
+			<KEYWORD1>GLOBAL</KEYWORD1>
 			<KEYWORD1>GOTO</KEYWORD1>
 			<KEYWORD1>GRANT</KEYWORD1>
 			<KEYWORD1>GROUP</KEYWORD1>
 			<KEYWORD1>HAVING</KEYWORD1>
 			<KEYWORD1>HOLDLOCK</KEYWORD1>
-			<KEYWORD1>IDENTITY_INSERT</KEYWORD1>
-			<KEYWORD1>IDENTITYCOL</KEYWORD1>
 			<KEYWORD1>ID</KEYWORD1>
+			<KEYWORD1>IDENTITYCOL</KEYWORD1>
+			<KEYWORD1>IDENTITY_INSERT</KEYWORD1>
 			<KEYWORD1>IF</KEYWORD1>
 			<KEYWORD1>INDEX</KEYWORD1>
 			<KEYWORD1>INNER</KEYWORD1>
+			<KEYWORD1>INSENSITIVE</KEYWORD1>
 			<KEYWORD1>INSERT</KEYWORD1>
 			<KEYWORD1>INTO</KEYWORD1>
 			<KEYWORD1>IS</KEYWORD1>
 			<KEYWORD1>ISOLATION</KEYWORD1>
 			<KEYWORD1>KEY</KEYWORD1>
+			<KEYWORD1>KEYSET</KEYWORD1>
 			<KEYWORD1>KILL</KEYWORD1>
+			<KEYWORD1>LAST</KEYWORD1>
 			<KEYWORD1>LEVEL</KEYWORD1>
 			<KEYWORD1>LINENO</KEYWORD1>
 			<KEYWORD1>LOAD</KEYWORD1>
+			<KEYWORD1>LOCAL</KEYWORD1>
 			<KEYWORD1>MAX</KEYWORD1>
 			<KEYWORD1>MIN</KEYWORD1>
 			<KEYWORD1>MIRROREXIT</KEYWORD1>
 			<KEYWORD1>NATIONAL</KEYWORD1>
+			<KEYWORD1>NEXT</KEYWORD1>
 			<KEYWORD1>NOCHECK</KEYWORD1>
 			<KEYWORD1>NONCLUSTERED</KEYWORD1>
 			<KEYWORD1>OF</KEYWORD1>
@@ -155,8 +172,10 @@
 			<KEYWORD1>OPENDATASOURCE</KEYWORD1>
 			<KEYWORD1>OPENQUERY</KEYWORD1>
 			<KEYWORD1>OPENROWSET</KEYWORD1>
+			<KEYWORD1>OPTIMISTIC</KEYWORD1>
 			<KEYWORD1>OPTION</KEYWORD1>
 			<KEYWORD1>ORDER</KEYWORD1>
+			<KEYWORD1>OUTPUT</KEYWORD1>
 			<KEYWORD1>OVER</KEYWORD1>
 			<KEYWORD1>PERCENT</KEYWORD1>
 			<KEYWORD1>PERM</KEYWORD1>
@@ -167,6 +186,7 @@
 			<KEYWORD1>PREPARE</KEYWORD1>
 			<KEYWORD1>PRIMARY</KEYWORD1>
 			<KEYWORD1>PRINT</KEYWORD1>
+			<KEYWORD1>PRIOR</KEYWORD1>
 			<KEYWORD1>PRIVILEGES</KEYWORD1>
 			<KEYWORD1>PROC</KEYWORD1>
 			<KEYWORD1>PROCEDURE</KEYWORD1>
@@ -176,24 +196,30 @@
 			<KEYWORD1>RAISERROR</KEYWORD1>
 			<KEYWORD1>READ</KEYWORD1>
 			<KEYWORD1>READTEXT</KEYWORD1>
+			<KEYWORD1>READ_ONLY</KEYWORD1>
 			<KEYWORD1>RECONFIGURE</KEYWORD1>
 			<KEYWORD1>REFERENCES</KEYWORD1>
+			<KEYWORD1>RELATIVE</KEYWORD1>
 			<KEYWORD1>REPEATABLE</KEYWORD1>
 			<KEYWORD1>REPLICATION</KEYWORD1>
 			<KEYWORD1>RESTORE</KEYWORD1>
 			<KEYWORD1>RESTRICT</KEYWORD1>
 			<KEYWORD1>RETURN</KEYWORD1>
+			<KEYWORD1>RETURNS</KEYWORD1>
 			<KEYWORD1>REVOKE</KEYWORD1>
 			<KEYWORD1>ROLLBACK</KEYWORD1>
 			<KEYWORD1>ROWGUIDCOL</KEYWORD1>
 			<KEYWORD1>RULE</KEYWORD1>
 			<KEYWORD1>SAVE</KEYWORD1>
 			<KEYWORD1>SCHEMA</KEYWORD1>
+			<KEYWORD1>SCROLL</KEYWORD1>
+			<KEYWORD1>SCROLL_LOCKS</KEYWORD1>
 			<KEYWORD1>SELECT</KEYWORD1>
 			<KEYWORD1>SERIALIZABLE</KEYWORD1>
 			<KEYWORD1>SET</KEYWORD1>
 			<KEYWORD1>SETUSER</KEYWORD1>
 			<KEYWORD1>SHUTDOWN</KEYWORD1>
+			<KEYWORD1>STATIC</KEYWORD1>
 			<KEYWORD1>STATISTICS</KEYWORD1>
 			<KEYWORD1>TABLE</KEYWORD1>
 			<KEYWORD1>TAPE</KEYWORD1>
@@ -271,9 +297,9 @@
 			<KEYWORD2>@@MAX_PRECISION</KEYWORD2>
 			<KEYWORD2>@@NESTLEVEL</KEYWORD2>
 			<KEYWORD2>@@OPTIONS</KEYWORD2>
+			<KEYWORD2>@@PACKET_ERRORS</KEYWORD2>
 			<KEYWORD2>@@PACK_RECEIVED</KEYWORD2>
 			<KEYWORD2>@@PACK_SENT</KEYWORD2>
-			<KEYWORD2>@@PACKET_ERRORS</KEYWORD2>
 			<KEYWORD2>@@PROCID</KEYWORD2>
 			<KEYWORD2>@@REMSERVER</KEYWORD2>
 			<KEYWORD2>@@ROWCOUNT</KEYWORD2>
@@ -295,20 +321,25 @@
 			<KEYWORD2>ATAN</KEYWORD2>
 			<KEYWORD2>ATN2</KEYWORD2>
 			<KEYWORD2>AVG</KEYWORD2>
+			<KEYWORD2>BINARY_CHECKSUM</KEYWORD2>
 			<KEYWORD2>CASE</KEYWORD2>
 			<KEYWORD2>CAST</KEYWORD2>
 			<KEYWORD2>CEILING</KEYWORD2>
 			<KEYWORD2>CHARINDEX</KEYWORD2>
+			<KEYWORD2>CHECKSUM</KEYWORD2>
+			<KEYWORD2>CHECKSUM_AGG</KEYWORD2>
 			<KEYWORD2>COALESCE</KEYWORD2>
+			<KEYWORD2>COLLATIONPROPERTY</KEYWORD2>
+			<KEYWORD2>COLUMNPROPERTY</KEYWORD2>
 			<KEYWORD2>COL_LENGTH</KEYWORD2>
 			<KEYWORD2>COL_NAME</KEYWORD2>
-			<KEYWORD2>COLUMNPROPERTY</KEYWORD2>
 			<KEYWORD2>CONVERT</KEYWORD2>
 			<KEYWORD2>COS</KEYWORD2>
 			<KEYWORD2>COT</KEYWORD2>
 			<KEYWORD2>COUNT</KEYWORD2>
-			<KEYWORD2>CURRENT_TIME</KEYWORD2>
+			<KEYWORD2>COUNT_BIG</KEYWORD2>
 			<KEYWORD2>CURRENT_DATE</KEYWORD2>
+			<KEYWORD2>CURRENT_TIME</KEYWORD2>
 			<KEYWORD2>CURRENT_TIMESTAMP</KEYWORD2>
 			<KEYWORD2>CURRENT_USER</KEYWORD2>
 			<KEYWORD2>CURSOR_STATUS</KEYWORD2>
@@ -324,42 +355,46 @@
 			<KEYWORD2>DEGREES</KEYWORD2>
 			<KEYWORD2>DIFFERENCE</KEYWORD2>
 			<KEYWORD2>EXP</KEYWORD2>
-			<KEYWORD2>FILE_ID</KEYWORD2>
-			<KEYWORD2>FILE_NAME</KEYWORD2>
+			<KEYWORD2>FILEGROUPPROPERTY</KEYWORD2>
 			<KEYWORD2>FILEGROUP_ID</KEYWORD2>
 			<KEYWORD2>FILEGROUP_NAME</KEYWORD2>
-			<KEYWORD2>FILEGROUPPROPERTY</KEYWORD2>
 			<KEYWORD2>FILEPROPERTY</KEYWORD2>
+			<KEYWORD2>FILE_ID</KEYWORD2>
+			<KEYWORD2>FILE_NAME</KEYWORD2>
 			<KEYWORD2>FLOOR</KEYWORD2>
 			<KEYWORD2>FORMATMESSAGE</KEYWORD2>
 			<KEYWORD2>FULLTEXTCATALOGPROPERTY</KEYWORD2>
 			<KEYWORD2>FULLTEXTSERVICEPROPERTY</KEYWORD2>
 			<KEYWORD2>GETANSINULL</KEYWORD2>
 			<KEYWORD2>GETDATE</KEYWORD2>
+			<KEYWORD2>GETUTCDATE</KEYWORD2>
+			<KEYWORD2>GROUPING</KEYWORD2>
 			<KEYWORD2>HOST_ID</KEYWORD2>
 			<KEYWORD2>HOST_NAME</KEYWORD2>
+			<KEYWORD2>IDENTITY</KEYWORD2>
+			<KEYWORD2>IDENTITY_INSERT</KEYWORD2>
+			<KEYWORD2>IDENT_CURRENT</KEYWORD2>
 			<KEYWORD2>IDENT_INCR</KEYWORD2>
 			<KEYWORD2>IDENT_SEED</KEYWORD2>
-			<KEYWORD2>IDENTITY_INSERT</KEYWORD2>
-			<KEYWORD2>INDEX_COL</KEYWORD2>
 			<KEYWORD2>INDEXPROPERTY</KEYWORD2>
-			<KEYWORD2>IS_MEMBER</KEYWORD2>
-			<KEYWORD2>IS_SRVROLEMEMBER</KEYWORD2>
+			<KEYWORD2>INDEX_COL</KEYWORD2>
 			<KEYWORD2>ISDATE</KEYWORD2>
 			<KEYWORD2>ISNULL</KEYWORD2>
 			<KEYWORD2>ISNUMERIC</KEYWORD2>
+			<KEYWORD2>IS_MEMBER</KEYWORD2>
+			<KEYWORD2>IS_SRVROLEMEMBER</KEYWORD2>
 			<KEYWORD2>LEFT</KEYWORD2>
 			<KEYWORD2>LEN</KEYWORD2>
-			<KEYWORD2>LOG</KEYWORD2>
 			<KEYWORD2>LOG10</KEYWORD2>
+			<KEYWORD2>LOG</KEYWORD2>
 			<KEYWORD2>LOWER</KEYWORD2>
 			<KEYWORD2>LTRIM</KEYWORD2>
 			<KEYWORD2>MONTH</KEYWORD2>
 			<KEYWORD2>NEWID</KEYWORD2>
 			<KEYWORD2>NULLIF</KEYWORD2>
+			<KEYWORD2>OBJECTPROPERTY</KEYWORD2>
 			<KEYWORD2>OBJECT_ID</KEYWORD2>
 			<KEYWORD2>OBJECT_NAME</KEYWORD2>
-			<KEYWORD2>OBJECTPROPERTY</KEYWORD2>
 			<KEYWORD2>PARSENAME</KEYWORD2>
 			<KEYWORD2>PATINDEX</KEYWORD2>
 			<KEYWORD2>PERMISSIONS</KEYWORD2>
@@ -373,7 +408,11 @@
 			<KEYWORD2>REVERSE</KEYWORD2>
 			<KEYWORD2>RIGHT</KEYWORD2>
 			<KEYWORD2>ROUND</KEYWORD2>
+			<KEYWORD2>ROWCOUNT_BIG</KEYWORD2>
 			<KEYWORD2>RTRIM</KEYWORD2>
+			<KEYWORD2>SCOPE_IDENTITY</KEYWORD2>
+			<KEYWORD2>SERVERPROPERTY</KEYWORD2>
+			<KEYWORD2>SESSIONPROPERTY</KEYWORD2>
 			<KEYWORD2>SESSION_USER</KEYWORD2>
 			<KEYWORD2>SIGN</KEYWORD2>
 			<KEYWORD2>SIN</KEYWORD2>
@@ -382,9 +421,12 @@
 			<KEYWORD2>SQRT</KEYWORD2>
 			<KEYWORD2>SQUARE</KEYWORD2>
 			<KEYWORD2>STATS_DATE</KEYWORD2>
+			<KEYWORD2>STDEV</KEYWORD2>
+			<KEYWORD2>STDEVP</KEYWORD2>
 			<KEYWORD2>STR</KEYWORD2>
 			<KEYWORD2>STUFF</KEYWORD2>
 			<KEYWORD2>SUBSTRING</KEYWORD2>
+			<KEYWORD2>SUM</KEYWORD2>
 			<KEYWORD2>SUSER_ID</KEYWORD2>
 			<KEYWORD2>SUSER_NAME</KEYWORD2>
 			<KEYWORD2>SUSER_SID</KEYWORD2>
@@ -396,9 +438,11 @@
 			<KEYWORD2>TYPEPROPERTY</KEYWORD2>
 			<KEYWORD2>UNICODE</KEYWORD2>
 			<KEYWORD2>UPPER</KEYWORD2>
+			<KEYWORD2>USER</KEYWORD2>
 			<KEYWORD2>USER_ID</KEYWORD2>
 			<KEYWORD2>USER_NAME</KEYWORD2>
-			<KEYWORD2>USER</KEYWORD2>
+			<KEYWORD2>VAR</KEYWORD2>
+			<KEYWORD2>VARP</KEYWORD2>
 			<KEYWORD2>YEAR</KEYWORD2>
 
 			<!-- operators -->
@@ -861,6 +905,9 @@
 			<KEYWORD3>xp_trace_settextfilter</KEYWORD3>
 			<KEYWORD3>xp_trace_setuserfilter</KEYWORD3>
 			<KEYWORD3>xp_trace_setwritefilter</KEYWORD3>
+			<KEYWORD3>fn_helpcollations</KEYWORD3>
+			<KEYWORD3>fn_servershareddrives</KEYWORD3>
+			<KEYWORD3>fn_virtualfilestats</KEYWORD3>
 
 			<!-- SQL Server 7.0 system tables -->
 			<KEYWORD3>backupfile</KEYWORD3>
@@ -966,5 +1013,6 @@
 			<KEYWORD3>systypes</KEYWORD3>
 			<KEYWORD3>sysusers</KEYWORD3>
 		</KEYWORDS>
+		<MARK_FOLLOWING TYPE="LITERAL2">@</MARK_FOLLOWING>
 	</RULES>
 </MODE>
